adding faq page

--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -118,10 +118,10 @@
 
         <div>
             <section>
-                <h3 id="subtitle">Popular en Drinkers</h3>
-                    <ul id="productSection">
+                <h3 class="subtitle">Popular en Drinkers</h3>
+                    <ul class="productSection">
                         <li>
-                            <div id="productView">
+                            <div class="productView">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -129,7 +129,7 @@
                             <h5>Desde 0.00$</h3>
                         </li>
                         <li>
-                            <div id="productView">
+                            <div class="productView">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -137,7 +137,7 @@
                             <h5>Desde 0.00$</h3>
                         </li>
                         <li>
-                            <div id="productView">
+                            <div class="productView">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -145,7 +145,7 @@
                             <h5>Desde 0.00$</h3>
                         </li>
                         <li>
-                            <div id="productView">
+                            <div class="productView">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -153,7 +153,7 @@
                             <h5>Desde 0.00$</h3>
                         </li>
                         <li>
-                            <div id="productView">
+                            <div class="productView">
                                 <input type="number" class="productCant">
                                 <button>Agregar</button>
                             </div>
@@ -163,10 +163,10 @@
                     </ul>
             </section>
             <section>
-                <h3 id="subtitle">Ron</h3>
-                <ul id="productSection">
+                <h3 class="subtitle">Ron</h3>
+                <ul class="productSection">
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -174,7 +174,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -182,7 +182,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -190,7 +190,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -198,7 +198,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -208,10 +208,10 @@
                 </ul>
             </section>
             <section>
-                <h3 id="subtitle">Whisky</h3>
-                <ul id="productSection">
+                <h3 class="subtitle">Whisky</h3>
+                <ul class="productSection">
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -219,7 +219,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -227,7 +227,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -235,7 +235,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
@@ -243,7 +243,7 @@
                         <h5>Desde 0.00$</h3>
                     </li>
                     <li>
-                        <div id="productView">
+                        <div class="productView">
                             <input type="number" class="productCant">
                             <button>Agregar</button>
                         </div>
