FAQ summarys and details added

--- a/src/layouts/Landing/faq/index.html
+++ b/src/layouts/Landing/faq/index.html
@@ -108,7 +108,48 @@
     </aside>
 
     <main>
-        <h2 id="subtitle">FAQ's</h2>
+        <h2 class="subtitle">FAQ's</h2>
+        <div>
+        <details>
+            <summary>¿QUIÉNES SOMOS?</summary>
+        </details>
+
+        <details>
+            <summary>¿LOS PRECIOS DE LA PÁGINA WEB SE ENCUENTRAN ACTUALIZADOS?</summary>
+        </details>
+
+        <details>
+            <summary>¿ES POSIBLE RECIBIR MI PEDIDO EN MI RESIDENCIA, OFICINA O SALÓN DE EVENTOS?</summary>
+        </details>
+
+        <details>
+            <summary>¿PUEDO REALIZAR LA COMPRA DIRECTAMENTE EN LA TIENDA?</summary>
+        </details>
+
+        <details>
+            <summary>¿CÓMO PUEDO REALIZAR EL PAGO DE MIS COMPRAS?</summary>
+        </details>
+
+        <details>
+            <summary>¿PUEDO DIVIDIR EL PAGO?</summary>
+        </details>
+
+        <details>
+            <summary>¿PUEDO PERSONALIZAR MI FACTURA?</summary>
+        </details>
+
+        <details>
+            <summary>MI PEDIDO NO FUE APROBADO ¿QUÉ DEBO HACER?</summary>
+        </details>
+
+        <details>
+            <summary>REALICÉ EL PAGO A TRAVÉS DE TRANSFERENCIA, PERO AÚN NO HA SIDO APROBADO ¿QUÉ DEBO HACER?</summary>
+        </details>
+
+        <details>
+            <summary>¿CUÁLES SON LAS ZONAS DE ENTREGA?</summary>
+        </details>
+        </div>
     </main>
 
     <footer>
