--- a/src/layouts/Landing/faq/index.html
+++ b/src/layouts/Landing/faq/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers</title>
     <link rel="stylesheet" href="../content.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -109,7 +110,7 @@
 
     <main>
         <h2 class="subtitle">FAQ's</h2>
-        <div>
+        <div class="faqs">
         <details>
             <summary>¿QUIÉNES SOMOS?</summary>
         </details>
