--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -36,6 +36,54 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+        <div class="Content">
+            <section class="Table--Container">
+                <div>
+                    <input type="text" placeholder="0000">
+                    <img src="../../../../public/images/icons/Search.png" alt="lupa">
+                </div>
+                <div>
+                    <table>
+                        <caption>Tabla de Ventas</caption>
+                        <thead>
+                            <tr>
+                                <th>Id Venta</th>
+                                <th>Id Bebida</th>
+                                <th>Cantidad</th>
+                                <th>Ingresos</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>1</td>
+                                <td>2</td>
+                                <td>45$</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>2</td>
+                                <td>3</td>
+                                <td>40$</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>3</td>
+                                <td>4</td>
+                                <td>50$</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>4</td>
+                                <td>7</td>
+                                <td>100$</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
