--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -104,7 +104,41 @@
                     <div class="Grafica">Grafica</div>
                 </article>
             </section>
+            <section class="Table--Popular">
+                <table>
+                    <caption>Productos Populares</caption>
+                    <tbody>
+                        <tr>
+                            <td>Ron</td>
+                        </tr>
+                        <tr>
+                            <td>Vulcana</td>
+                        </tr>
+                        <tr>
+                            <td>Voodka</td>
+                        </tr>
+                        <tr>
+                            <td>Blue Label</td>
+                        </tr>
+                        <tr>
+                            <td>Black Label</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </div>
+        <section class="Ventas">
+            <article>
+                <div class="Container--1">
+                    <div>Ventas del dia 002</div>
+                    <div>Ventas del mes 002</div>
+                </div>
+                <div class="Container--2">
+                    <div>Ingresos 1.000.000</div>
+                    <div>Egresos 1.000.000</div>
+                </div>
+            </article>
+        </section>
     </main>
 </body>
 </html>
